Fjerner Kodeverk Webservice + sonarcloud fikser